[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "m3u8down"
authors = [{ name = "LeeCQ", email = "lcq@leecq.cn" }]
description = "M3U8视频下载."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx~=0.25.1", "pydantic~=2.5.1", "m3u8",  'pycryptodome', 'rich']
dynamic = ["version"]

classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Framework :: Pydantic :: 2",
  "Natural Language :: Chinese (Simplified)",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lee-cq/m3u8down"
Issues = "https://github.com/lee-cq/m3u8down/issues"

[tool.setuptools]
packages = ["m3u8down"]

[tool.setuptools.dynamic]
version = {attr = "m3u8down.version.__version__"}
